--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^8.2.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-firebase-hooks": "^2.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
@@ -35,5 +36,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "firebaseconfig.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/swasthikshetty10/Chat-App-React-firebase.git"
+  },
+  "author": "swasthik",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/swasthikshetty10/Chat-App-React-firebase/issues"
+  },
+  "homepage": "https://github.com/swasthikshetty10/Chat-App-React-firebase#readme"
 }
